
[package]
name = "multipart-example"
version = "0.3.0"
authors = ["Casey Wylie <casewylie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Upload a file from rest api"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/cmwylie19/rust-server"
readme = "README.md"

[dependencies]
actix-multipart = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
futures = "0.3.1"
sanitize-filename = "0.2"
